# mush

./: .cz.toml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  license_header.txt  rustfmt.toml
src/: history.rs  main.rs
