[package]
name = "mush"
version = "0.1.0"
authors = ["Alastair Feille <me@alastair.se>"]
edition = "2018"
description = "A shell written in Rust"
readme = "README.md"
repository = "https://github.com/mutoso/mush"
license = "MPL-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
ctrlc = "3"
dirs = "3"
serde = { version = "1", features = ["derive"] }
whoami = "1"
